# https-ardupilot-vision.emergent.host

./: .gitignore  README.md  backend_3d_test.py  backend_test.py  design_guidelines.json
.emergent/: emergent.yml  summary.txt  testing_baseline_commit
backend/: requirements.txt  server.py
backend/tests/: conftest.py  test_api.py
docs/: 01_raspberry_pi_setup.md  02_wiring_diagrams.md  03_ardupilot_config.md  04_python_implementation.md  05_cpp_implementation.md  06_web_interface.md  07_autostart.md  08_testing.md  09_sitl_testing.md  README.md
firmware/config/: visual_homing.param
firmware/cpp/: CMakeLists.txt
firmware/cpp/src/: camera.cpp  camera.hpp  feature_tracker.cpp  feature_tracker.hpp  lidar.cpp  lidar.hpp  main.cpp  mavlink_interface.cpp  mavlink_interface.hpp  optical_flow.cpp  optical_flow.hpp  route_memory.cpp  route_memory.hpp  smart_rtl.hpp  visual_odometry.cpp  visual_odometry.hpp
firmware/python/: config.py  main.py
firmware/scripts/: build_cpp.sh  install_dependencies.sh  setup_autostart.sh
frontend/: .env  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
memory/: PRD.md
releases/: v1.0.0.json
scripts/: install.sh
test_reports/: iteration_1.json  iteration_10.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json  iteration_9.json
test_reports/pytest/: pytest_results.xml
tests/: playwright.config.ts
tests/e2e/: .pw_runner.config.ts  core-flows.spec.ts  map-simulation.spec.ts  (+1 more)
(+21 files in other folders)
